cmake_minimum_required(VERSION 3.13)
project(cDs)

set(CMAKE_CXX_STANDARD 14)

add_executable(cDs main.cpp config.h SqList/SqList.h SqList/others.h SqList/yiyuan.h string/c/mstring.h tree/avl/c++/avlTree.h tree/bst/c++/BSTree.h tree/BinaryTree/c++/BinaryTree.h stack/c++/calculator.h string/c++/kmp.h graph/c/graph.h graph/c/Adjacency_Matrix.h graph/c++/DenseGraph.h graph/c++/SparseGraph.h graph/c++/ReadGraph.h graph/c++/Components.h sort/insertSort/c++/InsertSort.h sort/sortHelper.h sort/BinaryInsertSort/c++/BinaryInsertSort.h sort/shellSort/c++/shellSort.h sort/bubbleSort/c++/bubbleSort.h sort/selectSort/c++/selectSort.h sort/quickSort/c++/quickSort.h sort/heapSort/c++/heapSort.h string/c++/kmp2.h string/c++/kmp3.h string/c++/bc.h string/c++/gs.h sort/insertSort/c++/insertSort2.h sort/quickSort/c++/quickSort3Ways.h sort/quickSort/c++/quickSort1Way.h sort/mergeSort/c++/mergeSort.h graph/c++/adjMatrix.h graph/c++/graph.h graph/c++/adjList.h)